# image-resizer

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.cpp
tests/: CMakeLists.txt  test_base64Converter.cpp  test_resizeImage.cpp
usecase/base64_converter/: Base64Converter.cpp  Base64Converter.hpp  IBase64Converter.hpp
usecase/resize_image/: ResizeImage.cpp  ResizeImage.hpp
